# c-events

./: .gitignore  CMakeLists.txt  README.md  eventsConfig.cmake.in  picoev.h  picoev_select.c  valgrind.supp
.github/workflows/: ci-macos.yml  ci.yml  ci_centos.yml  ci_cpu-ppc64le.yml  ci_cpu-qemu.yml  ci_cpu-s390x.yml  ci_cpu.yml  release.yml
docs/: _config.yml  index.md
examples/: CMakeLists.txt  _cat.c  _mkfifo.c  argdumper.c  bench_cascade.c  benchmark.c  child_command.c  dns.c  dns_ip.c  event-read-fifo.c  events_echo.c  events_watch.c  future_wait.c  generator.c  helloworld.c  inotify.c  onchange.c  queue-work.c  signal-test.c  spawn.c  task_group.c  task_guarded.c  task_multi-args.c  task_sleep.c  tcp_proxy.c  time-test.c  udp-dhcp.c  waitgroup.c
examples/exceptions/: CMakeLists.txt  throw_no_try.c  throw_no_try_protected.c  try_catch.c  try_catch_any.c  try_catch_if.c  try_catch_if_sigsegv.c  try_catch_raise.c  try_double_rethrow.c  try_finally.c  try_free_protected.c  try_protect.c  try_protected.c  try_rethrow.c  try_signal_sigfpe.c  try_signal_sigsegv.c  try_unprotected.c
examples/ssl/: CMakeLists.txt  create-x509.c  fetch.c  tls-echo-server.c
httpi/: .gitignore  CMakeLists.txt  README.md
httpi/examples/: fetch_parse.c
httpi/include/: httpi.h  https.h  htypes.h
httpi/resources/: httpi.conf
httpi/src/: http.c
httpi/src/app/: url.c
httpi/src/lib/: httpi_authorize.c  httpi_internal.h  httpi_io.c  httpi_options.c  httpi_request.c  httpi_start.c  httpi_ws.c
httpi/src/lib/mod/: mod_handle_form.c  mod_quickjs.c  mod_response.c  mod_zlib.c
httpi/tests/: CMakeLists.txt  test-http_response.c  test-parse_http.c  test-parse_multibad.c  test-parse_multipart.c  test_assert.h
httpi/tests/httpi/: CMakeLists.txt  test-http_auth.c  test-http_connect.c  test-http_connect_ws.c  test-http_download.c  test-http_route.c  test-http_upload.c  test-http_websocket_connect.c  test-httpi_http_server.c  test-httpi_https_server.c  test-httpi_setup.c  test-httpi_start.c  test-httpi_units.c  unit_test.c
httpi/tests/units/: cgi_test.cgi  test-http_auth.c  test-http_connect.c  test-http_download.c  test-http_route.c  test-http_upload.c  test-http_websocket_connect.c  test-httpi_http_server.c  test-httpi_https_server.c  test-httpi_setup.c  test-httpi_units.c  test.cgi
httpie/: CMakeLists.txt  FindHttpie.cmake  README.md  httpieConfig.cmake.in
httpie/examples/: CMakeLists.txt  fetch_parse.c
httpie/include/: hashtable.h  httpie.h  https.h  htypes.h  map.h
httpie/resources/: httpie.conf  url.html
httpie/src/: hashtable.c  http.c  json.c  parson.c
httpie/src/app/: httpie.c  url.c
httpie/src/lib/: httpie_authorize.c  httpie_internal.h  httpie_io.c  httpie_options.c  httpie_request.c  httpie_start.c  httpie_ws.c
httpie/src/lib/mod/: http2.inl  mod_handle_form.c  mod_http2.c  mod_quickjs.c  mod_response.c  mod_zlib.c  zlib.inl
httpie/tests/: CMakeLists.txt  test-http_request.c  test-http_response.c  test-json_parser.c  test-parse_http.c  test-parse_multibad.c  test-parse_multipart.c  test_assert.h
httpie/tests/httpie/: CMakeLists.txt  unit_test.c
httpie/tests/multibody/: basic_multipart.txt
include/: arrays.h  async_io.h  async_tls.h  catomics.h  events.h  except.h  future.h  os.h  os_io.h  os_tls.h  os_unix.h  os_windows.h  rpmalloc.h  threaded.h
include/compat/: dirent_msvc.h  endian.h  epoll.h  pthread.h  ucontext.h  unistd.h  win32netcompat.h
include/compat/sys/: socket.h  utsname.h
src/: arrays.c  asm.c  async_io.c  async_tls.c  async_udp.c  async_uds.c  deque.c  epoll.c  events.c  events_internal.h  except.c  future.c  getopt.c  kqueue.c  os_async.c  os_posix.c  os_tls.c  os_unix.c  os_windows.c  rpmalloc.c  wepoll.c  wepoll.h
tests/: CMakeLists.txt  assertions.h  child.c  child_cgi.c  client.c  test-arrays.c  test-changelist.c  test-closed.c  test-defer.c  test-dns.c  test-eof.c  test-exceptions.c  test-fs.c  test-fs_events.c  test-future-exception.c  test-future.c  test-getopts.c  test-parse_uri.c  test-pipe.c  test-queue_work.c  test-spawn.c  test-spawn_cgi.c  test-task_group.c  test-thrd_static.c  test-thread.c  test-time.c  test-tls.c  test-tls_static.c  test-udp.c  test-uds.c  test-waitgroup.c  test-yielding.c  test_invariant_async_io.c
