set(SUB_PROJECT httpie)
set(SUB_PROJECT_VERSION 0.7.0)
set(SUB_PROJECT_VERSION_MAJOR 0.7)
set(SUB_PROJECT_DESCRIPTION "httpie - dual webclient/server processor")

file(GLOB httpie_files
    ${CMAKE_CURRENT_SOURCE_DIR}/src/*.c
)

if(BUILD_SHARED_LIBS)
	add_library(${SUB_PROJECT} SHARED ${httpie_files})
else()
	add_library(${SUB_PROJECT} STATIC ${httpie_files})
endif()

add_library(HTTPIE::WEB ALIAS ${SUB_PROJECT})
target_include_directories(${SUB_PROJECT}
    PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
	$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>)

target_include_directories(${SUB_PROJECT}
	PRIVATE $<BUILD_INTERFACE:${EVENTS_INCLUDE_DIR} $<INSTALL_INTERFACE:${EVENTS_INCLUDE_DIR})
target_link_libraries(${SUB_PROJECT} PUBLIC ${PROJECT_NAME})

set_target_properties(${SUB_PROJECT} PROPERTIES
	OUTPUT_NAME ${SUB_PROJECT}
	ARCHIVE_OUTPUT_NAME ${SUB_PROJECT}
	EXPORT_NAME ${SUB_PROJECT}
	VERSION  ${SUB_PROJECT_VERSION}
	SOVERSION ${SUB_PROJECT_VERSION_MAJOR}
)

set(_fmt TGZ)
if(WIN32)
  set(_fmt ZIP)
endif()

set(CPACK_GENERATOR ${_fmt})
set(CPACK_ARCHIVE_COMPONENT_INSTALL ON)
set(CPACK_DEB_COMPONENT_INSTALL ON)
set(CPACK_RPM_COMPONENT_INSTALL ON)
set(CPACK_NUGET_COMPONENT_INSTALL ON)
set(CPACK_WIX_COMPONENT_INSTALL ON)
set(CPACK_NSIS_MODIFY_PATH ON)
set(CPACK_COMPONENTS_ALL_IN_ONE_PACKAGE 1)
set(CPACK_VERBATIM_VARIABLES YES)

set(CPACK_PACKAGE_VENDOR "https://github.com/zelang-dev/c-events")
set(CPACK_PACKAGE_VERSION ${SUB_PROJECT_VERSION})

set(CMAKE_INSTALL_CONFIG_NAME ${CMAKE_BUILD_TYPE})
set(INCLUDE_INSTALL_DIR ${CMAKE_INSTALL_INCLUDEDIR}/${SUB_PROJECT}
    CACHE PATH "Location of header files" )

set(SYSCONFIG_INSTALL_DIR ${CMAKE_INSTALL_SYSCONFDIR}/${SUB_PROJECT}
    CACHE PATH "Location of configuration files" )

configure_package_config_file(httpieConfig.cmake.in
  	${CMAKE_CURRENT_BINARY_DIR}/httpieConfig.cmake
	INSTALL_DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/${SUB_PROJECT}
	PATH_VARS INCLUDE_INSTALL_DIR SYSCONFIG_INSTALL_DIR)

write_basic_package_version_file(
  ${CMAKE_CURRENT_BINARY_DIR}/httpieConfigVersion.cmake
  VERSION ${SUB_PROJECT_VERSION}
  COMPATIBILITY SameMajorVersion )

set(CPACK_PACKAGE_DIRECTORY "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY}/Package")
set(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${SUB_PROJECT}")
set(CPACK_PACKAGE_INSTALL_DIRECTORY ${SUB_PROJECT})

set(CPACK_PACKAGE_CONTACT "lstubbs@zelang.dev")
set(CPACK_DEBIAN_PACKAGE_MAINTAINER "Lawrence Stubbs <${CPACK_PACKAGE_CONTACT}>")
set(CPACK_DEBIAN_FILE_NAME DEB-DEFAULT)
set(CPACK_COMPONENTS_GROUPING ALL_COMPONENTS_IN_ONE)
set(CPACK_COMPONENT_LIBRARIES_DISPLAY_NAME "httpie - dual webclient/server processor")
set(CPACK_COMPONENT_LIBRARIES_DESCRIPTION ${SUB_PROJECT_DESCRIPTION})

set(CPACK_RESOURCE_FILE_LICENSE ${CMAKE_CURRENT_SOURCE_DIR}/LICENSE.md)
set(CPACK_RESOURCE_FILE_README ${CMAKE_CURRENT_SOURCE_DIR}/README.md)

set(CPACK_PACKAGE_VENDOR "https://github.com/zelang-dev")
set(CPACK_PACKAGE_VERSION ${SUB_PROJECT_VERSION})
set(CPACK_PACKAGE_DESCRIPTION ${SUB_PROJECT_DESCRIPTION})

set(CPACK_RPM_PACKAGE_LICENSE "MIT")
set(CPACK_RPM_PACKAGE_URL "https://zelang-dev.github.io/c-events/")
set(CPACK_RPM_PACKAGE_ARCHITECTURE "noarch")

install(FILES ${CMAKE_CURRENT_BINARY_DIR}/httpieConfig.cmake
	${CMAKE_CURRENT_BINARY_DIR}/httpieConfigVersion.cmake
	DESTINATION "${CMAKE_INSTALL_LIBDIR}/cmake/${SUB_PROJECT}" )

install(
	TARGETS ${SUB_PROJECT}
	EXPORT "${SUB_PROJECT}Targets"
	ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
	LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
	PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
	INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
)

install(
	EXPORT "${SUB_PROJECT}Targets"
	FILE "${SUB_PROJECT}Targets.cmake"
	NAMESPACE HTTPIE::
	DESTINATION "${CMAKE_INSTALL_LIBDIR}/cmake/${SUB_PROJECT}"
)

install(TARGETS ${SUB_PROJECT} DESTINATION lib)
install(FILES include/*.h DESTINATION include)
set(CPACK_INSTALL_CMAKE_CONFIGURATIONS Release)

if(BUILD_EXAMPLES)
	add_subdirectory(examples)
endif()

if(BUILD_TESTS)
	add_subdirectory(tests)
endif()
